fixed a table overflow issue

--- a/wifidb/wifidb/themes/vistumbler_css/html5style.css
+++ b/wifidb/wifidb/themes/vistumbler_css/html5style.css
@@ -25,8 +25,9 @@ th, td {
 }
 
 .bodywrap{
-    margin:0 auto;
-    min-width:700px
+	width:100%;
+    min-width:700px;
+	display: table
 }
 
 .sidenav{
@@ -53,6 +54,7 @@ th, td {
 	border-radius: 10px;
 	padding: 10px; 
 	min-width: 700px;
+	word-wrap: break-word;
 }
 
 .inside_dark_header {
